# nnrs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: activationfn.rs  edge.rs  layer.rs  lib.rs  main.rs  network.rs  node.rs
src/neat/: environment.rs  mod.rs  mutation.rs  random.rs  settings.rs
