[package]
name = "nnrs"
version = "0.2.1"
edition = "2021"
authors = ["OnlyCS"]
description = "DIY Neural Network Rust Library"
readme = "README.md"
repository = "https://github.com/OnlyCS/nnrs"
license = "AGPL-3.0"
keywords = ["neural-network", "rust"]
categories = ["science", "artificial-intelligence"]
documentation = "https://docs.rs/nnrs"
homepage = "https://github.com/OnlyCS/nnrs"

[dependencies]
anyhow = { version = "1.0.69", features = ["std", "backtrace"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
